# jeeves

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
docs/decisions/: 001-flakehell-configuration-file.md  commands-are-classes.md  custom-commands.md  flakehell-configuration-file.md  publish-to-cli.md
jeeves/: cli.py  decorator.py  models.py
jeeves/commands/: find_packages.py  flakehell.py  format.py  isort.py  lint.py  mypy.py  project_root.py  subprocess.py
jeeves_terraform/: main.py  terraform.py
tests/test_example/: test_some_function.py
